--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,4 @@
 .bg-menu{background-color: #7bb4e3;}
 .w-200{width:200px;}/* w-200 significa width 200px*/
-/* classe que será colocado no card-body para poder alinhar o texto interno*/
-.texto-justificado{text-align: justify; text-indent:1cm;}
+.ativo{border-bottom:2px solid #0a81f1 ;}
+
